[package]
name = "dapp3-student-intro"
version = "0.1.0"
edition = "2021"

[lib]
name = "student_intro"
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.14.7"
borsh = "0.9.3"
thiserror = "1.0.37"
